fix: Fix Navbar dropdown menu alignment & improved Hero section

--- a/src/components/Hero/Hero_Card/Hero_Card.module.scss
+++ b/src/components/Hero/Hero_Card/Hero_Card.module.scss
@@ -4,6 +4,7 @@ $progress-bar-height: 7px;
     & img {
         border-radius: $border-radius;
         width: 100%;
+        margin-bottom: 1rem;
         height: auto;
     }
 
@@ -13,6 +14,7 @@ $progress-bar-height: 7px;
         letter-spacing: 0;
         text-transform: none;
         line-height: 100%;
+        margin: 1rem 0;
     }
 
     &Text {
@@ -22,7 +24,7 @@ $progress-bar-height: 7px;
 
     &ProgressBar {
         position: relative;
-        margin: 2rem 0;
+        margin: 3rem 0;
         width: 100%;
         height: $progress-bar-height;
         border-radius: $border-radius;
